Fix news details page list styling with improved spacing and formatting

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -170,7 +170,7 @@ body {
 .article-content ol {
   margin-top: 1em;
   margin-bottom: 1.25em;
-  padding-left: 1.5em;
+  padding-left: 2em;
 }
 
 .article-content ul {
@@ -182,8 +182,14 @@ body {
 }
 
 .article-content li {
-  margin-bottom: 0.5em;
-  padding-left: 0.25em;
+  margin-bottom: 1.25em;
+  padding-left: 0.5em;
+  line-height: 1.6;
+  display: list-item;
+}
+
+.article-content li:last-child {
+  margin-bottom: 0;
 }
 
 .article-content ul ul,
